src/test/deca/syntax/valid/synt/class_decl_field_before_method.deca
/*
    Description : Test de la possibilité de définir un attribut de classe avant une méthode

    Résultat : OK
*/
class A{
    int x;

    void m(){

    }
}
{}
