src/test/deca/syntax/invalid/synt/method_with_null_param_type.deca
/*
    Description : paramètre de type void dans une méthode

    Résultat : Erreur contextuelle
*/
class A{
    void x(null y){

    }
}
